Change default text color to transparent
PDFOC-15